--- a/templates/theory.html
+++ b/templates/theory.html
@@ -5,6 +5,7 @@
      crossorigin="anonymous"></script>
   <meta charset="UTF-8" />
   <title>How It Works – PulseSense</title>
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   <style> 
     :root {
