--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <title>PulseSense - Measurement Result</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
