--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>PulseSense Instructions</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-png">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-ico">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
