--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7378987771428327"
      crossorigin="anonymous"></script>
   <title>PulseSense</title>
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+ <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-ico">
 
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   <style>
