--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -95,7 +95,7 @@
 
     <div class="step">
       <img src="{{ url_for('static', filename='images/step1.png') }}" alt="Step 1">
-      <p><strong>Step 1:</strong> Clean your webcam and make sure the light is bright and even (avoid flickering).</p>
+      <p><strong>Step 1:</strong> Clean your webcam, click on start camera, and make sure the light is bright and even (avoid flickering).</p>
     </div>
 
     <div class="step">
@@ -105,11 +105,11 @@
 
     <div class="step">
       <img src="{{ url_for('static', filename='images/step3.png') }}" alt="Step 3">
-      <p><strong>Step 3:</strong> Keep your finger still and click <strong>"Start Measurement"</strong>. Hold it there for exactly 7 seconds.</p>
+      <p><strong>Step 3:</strong> Keep your finger still and click <strong>"Start Measurement"</strong>. Hold it there for exactly 10 seconds.</p>
     </div>
 
     <div class="step">
-      
+      <img src="{{ url_for('static', filename='images/step4.png') }}">
       <p><strong>Step 4:</strong> Wait for the result to appear. If accuracy is low, try again with improved lighting and stability.</p>
     </div>
 
