--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -112,6 +112,11 @@
       <img src="{{ url_for('static', filename='images/step4.png') }}">
       <p><strong>Step 4:</strong> Wait for the result to appear. If accuracy is low, try again with improved lighting and stability.</p>
     </div>
+    
+     <div class="step">
+      <img src="{{ url_for('static', filename='images/step5.png') }}">
+      <p><strong>Note:</strong> If any other body part is focused apart from your finger, it might also detect the red intensity of that body part and give inaccurate readings.</p>
+    </div>
 
   </div>
   <!-- Footer -->
